ID added to wrong table tag - fixed. (BusParser not demo class) ID added to <p> in index for CSS formatting on mobile devices.

--- a/src/main/webapp/main.css
+++ b/src/main/webapp/main.css
@@ -17,8 +17,12 @@
         background:#e0e0e0;
         }
         
+        #para{
+        width: 70%;
+        }
+        
 @media screen and (max-device-width: 640px) {
-  html, body, #searchbar{
+  html, body, #searchbar, #para{
         width: 350px;
         margin: 2px;
         padding: 1px;
